aboutStyle.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
    width: 100%;
}

body {
    min-height: 100%;
    width: 100%;
    background-color: #151515;
    padding: 3.75rem 5%;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

#content {
    width: 100%;
    height: 100%;
}

.header {
    color: whitesmoke;
    font-size: 3rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    margin-bottom: 1.5rem;
}

.header-text {
    margin-left: 2rem;
    text-wrap: nowrap;
}

#in-progress {
    margin-top: 5rem;
    color: #969696;
    font-size: 2.125rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2.125rem;
}

#in-progress img {
    height: 5rem;
    width: 5rem;
}

#in-progress div {
    text-align: center;
}

#in-progress div:first-child {
    margin-bottom: 0.5rem;
}

/* 
#sub-header-section {
    /* padding-inline: 4.25rem; */
/*}

.sub-header-title {
    color: whitesmoke;
    font-size: 1.5rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    margin-bottom: 2rem;
    text-decoration: underline;
    font-weight: bold;
}

.sub-header-text {
    color: whitesmoke;
    font-size: 1.5rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    margin-bottom: 3rem;
}

.sub-header-text a, .sub-header-text a:active, .sub-header-text a:hover {
    color: whitesmoke;
    font-size: 1.5rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    text-decoration: underline;
    cursor: pointer;
}

/* .sub-header-text-bold {
    color: whitesmoke;
    font-size: 1.5rem;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    font-weight: bold;
    margin-bottom: 2rem;
} */

/*#skills-list {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    flex-wrap: wrap;
    color: white;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    margin-block: 4rem;
    max-width: 75%;
    margin-inline: auto;
}

#skills-list img {
    height: 80px;
    width: 80px;
    transition: transform;
    transition-duration: 0.15s;
    transition-timing-function: ease-in-out;
}

#skills-list img:hover {
    transform: scale(1.25);
    transition: transform;
    transition-duration: 0.15s;
    transition-timing-function: ease-in-out;
}

#skills-boxes {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 1.5rem;
    margin-top: 3rem;
}

.skills-box {
    margin: 1.5rem;
    width: 25rem;
    height: 35rem;
    background-color: #151515;
    border: solid 0.25rem #969696;
    border-radius: 25px;
    padding: 1.75rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 1.5rem;
    text-align: center;
}

/* hr {
    width: 100%;
   border-color: #969696;
} */
/*
#skill-box-image {
    height: 80px;
    width: 80px;
}

.skill-title {
    color: whitesmoke;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    font-size: 1.75rem;
    width: 20rem;
}

.skill-desc {
    color: whitesmoke;
    font-family: 'Courier New', Courier, monospace, sans-serif;
    font-size: 1.325rem;
    width: 20rem;
    height: 17.5rem;
}

@media (max-width: 1000px) {
    #sub-header-section {
        padding-inline: 1rem;
    }
}

@media (max-width: 1208px) {
    .skills-box {
        height: fit-content;
    }
} */

